--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "dependencies": {
     "node-sass-chokidar": "0.0.3",
+    "npm-run-all": "^4.1.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17"
   },
   "scripts": {
-    "build-css": "node-sass-chokidar src/sass -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar src/sass -o src/ --watch --recursive",
+    "build-css": "node-sass-chokidar src/components -o src/css",
+    "watch-css": "npm run build-css && node-sass-chokidar src/components -o src/components --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
