--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "search-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://diemoritat.github.io/search-react",
   "dependencies": {
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
@@ -24,6 +25,7 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
+    "gh-pages": "^1.1.0",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "node-sass": "^4.7.2",
@@ -48,6 +50,8 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build-css": "node-sass-chokidar src/components -o src/css",
     "watch-css": "npm run build-css && node-sass-chokidar src/components -o src/components --watch --recursive",
     "start-js": "node scripts/start.js",
