--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gh-pages": "^1.1.0",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "jquery": "^3.2.1",
     "node-sass": "^4.7.2",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.2",
